[IMP] t9n: populate the fields needed to be translated when adding a resource file.
This commit enables the user to upload a .po resource file. When the
file is uploaded, the messages are read from the .po file and then
populated automatically in the view of the resource after saving the
project. The same happens when updating the resource file.

Task-3783071

--- a/addons/t9n/views/t9n_message_views.xml
+++ b/addons/t9n/views/t9n_message_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <odoo>
-    <record id="t9n.message_view_tree" model="ir.ui.view">
-        <field name="name">t9n.message.tree</field>
+    <record id="t9n.message_view_list" model="ir.ui.view">
+        <field name="name">t9n.message.list</field>
         <field name="model">t9n.message</field>
         <field name="arch" type="xml">
             <tree create="false">
