--- a/addons/t9n/views/t9n_language_views.xml
+++ b/addons/t9n/views/t9n_language_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <odoo>
-    <record id="t9n.language_view_tree" model="ir.ui.view">
-        <field name="name">t9n.language.tree</field>
+    <record id="t9n.language_view_list" model="ir.ui.view">
+        <field name="name">t9n.language.list</field>
         <field name="model">t9n.language</field>
         <field name="arch" type="xml">
             <tree>
