--- a/addons/t9n/views/t9n_project_views.xml
+++ b/addons/t9n/views/t9n_project_views.xml
@@ -3,7 +3,7 @@
     <record id="t9n.project_action" model="ir.actions.act_window">
         <field name="name">Projects</field>
         <field name="res_model">t9n.project</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <record id="t9n.project_view_form" model="ir.ui.view">
